--- a/styles.css
+++ b/styles.css
@@ -3,25 +3,91 @@ body {
     font-family: Helvetica;
 }
 
-.div1 {
-    border: 5px;
-    border-radius: 1px;
-    border-color: rgb(0, 0, 0);
-    border-style: inset;
+#hoved-div {
     text-align: center;
     margin: 18px;
+    position: relative;   
+    max-width: 450px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0%);
 }
 
-.tob {
-    margin: 18px;
+.div {
     border: 5px;
     border-radius: 1px;
-    border-color: rgb(0, 0, 0);
+    border-color: black;
     border-style: inset;
-    text-align: center;
+    position:absolute;
+    min-width: 1000px;
+    min-height: 300px;
 }
 
-#bildeavmeg {
-    max-height: 550px;
-    margin: 20px;
+.span {
+    border:5px;
+    border-radius: 1px;
+    border-color:black;
+    border-style: inset;
+    min-width: 50px;
+    padding: 50px;
+    text-align: center;
+    min-height: 190px;
+    max-height: 190px;
+}
+
+#fun-facts {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -0%);;
+}
+
+#fun-facts-text {
+    position: absolute;
+    margin-left: 50px;
+    min-width: 300px;
+    max-width: 300px;
+}
+
+#fun-facts-bilde {
+    min-width: 300px;
+    max-width: 300px;
+    position: absolute;
+    left: 500px;
+    margin-left: 50px;
+}
+
+#kart {
+    max-width: 300px;
+    scale: 120%;
+}
+
+#kart:hover {
+    transform: scale(150%);
+}
+
+#overskrift {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#singapore-flag {
+    max-width: 450px;
+}
+
+#kort-info {
+    left: 50%;
+    top:100%;
+    transform: translate(-50%,0%);
+}
+
+#kort-info-text {
+    min-width: 300px;
+    max-width: 300px;
+    position:absolute;
+}
+
+.text-kort-info {
+    bottom: 10px;
 }
